2002-02-23  Kjartan Maraas  <kmaraas@gnome.org>

	* *.glade: Don't translate the widget label.
	
2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>

	* dialog-about.c: Remove unsupported #ifdef ENABLE_NLS.
	
2002-02-21  Morten Welinder  <terra@diku.dk>

	* dialog-summary.c (dialog_summary_update): Constify.

	* dialog-stf-preview.c (stf_preview_draw_grid): Constify.

	* dialog-solver.c (cb_dialog_solve_clicked): Remove unneeded
	initialisation.

	* dialog-cell-format.c (fmt_dialog_init_format_page): Constify.
	(cb_validation_sensitivity): Constify.  Fix broken sensitivity
	code.

	* dialog-consolidate.c (construct_consolidate): Constify.

2002-02-20  Morten Welinder  <terra@diku.dk>

	* dialog-printer-setup.c (do_setup_page): Constify.

	* dialog-paste-special.c (paste_types, paste_ops): Constify.

	* dialog-cell-format.c (cb_validation_error_action_deactivate):
 	Constify.

	* dialog-analysis-tools.c (dialog_tool_init): Constify.

	* dialog-stf-preview.c (stf_preview_draw_box): Constify.
	(stf_preview_draw_line): Constify.
	(stf_preview_draw_text): Constify.

	* dialog-printer-setup.c (unit_editor_configure): Constify.

2002-02-18  Jody Goldberg <jody@gnome.org>

	* dialog-cell-format.c (fmt_dialog_impl) : fix signature
	  on apply button.

2002-02-18  Jody Goldberg <jody@gnome.org>

	* Release 1.1.0

2002-02-15  Jody Goldberg <jody@gnome.org>

	* function-select.glade : fix conversion breakage.  Still in bad
	  shape.

2002-02-10  Jody Goldberg <jody@gnome.org>

	* dialog-formula-guru.c (formula_guru_arg_new) : labels don't need
	  to expand.

2002-02-08  Jody Goldberg <jody@gnome.org>

	* sheet-order.glade  : supply a default size.

2002-02-07  Jody Goldberg <jody@gnome.org>

	* dialog-autoformat.c (cb_remove_current_activated) : unused.

2002-02-06  Michael Meeks  <michael@ximian.com>

	* dialog-graph-guru.c (dialog_graph_guru): fix typo.

2002-02-06  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dialog-cell-sort.c (cb_sort_selection_changed) : handle delete